--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
 
+<!--NAV:-->
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
@@ -39,7 +40,9 @@
         </div>
       </div>
     </nav>
+<!--:NAV-->
 
+<!--CONTACT:-->
     <div class="container-fluid contact">
       <h1 id="ctct">Kontakt</h1>
       <div class="row">
@@ -90,7 +93,9 @@
       </div>
       -->
     </div>
+<!--:CONTACT-->
 
+<!--FOOTER:-->
     <footer class="container-fluid text-center">
       <div class="row upper_ftr">
         <div class="col-sm-3" id="logo_ftr">
@@ -129,6 +134,7 @@
         </div>
       </div>
     </footer>
+<!--:FOOTER-->
 
   </body>
 </html>
