--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
     <link rel="shortcut icon" href="./img/logo-small.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./css/style.css">
-
-
-
-
-    <script src="./JavaScript/Karusel.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.0/css/lightbox.css">
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.0/js/lightbox.min.js"></script>
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="./JavaScript/Karusel.js"></script>
+    <script src="./JavaScript/lightbox.js"></script>
     <meta name="description" content="">
     <meta name="keywords" content="">
   </head>
@@ -36,9 +35,9 @@
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav navbar-right">
               <li><a href="#">Početna</a></li>
-              <li><a href="#">O nama</a></li>
+              <li><a href="#onon">O nama</a></li>
               <li><a href="#">Cenovnik</a></li>
-              <li><a href="#">Galerija</a></li>
+              <li><a href="#glgl">Galerija</a></li>
               <li><a href="#ctct">Kontakt</a></li>
             </ul>
           </div>
@@ -47,54 +46,167 @@
     </nav>
 <!--:NAV-->
 
+<!--CAROUSEL:-->
+    <header>
+      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#myCarousel" data-slide-to="1"></li>
+          <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner">
+          <div class="item active">
+            <img src="./Galerija/1540825725398.jpeg" alt="Prvi namestaj" style="width:100%;">
+          </div>
+
+          <div class="item">
+            <img src="./Galerija/75243087_2447518835563729_7587613427636716469_n.jpg" alt="Drugi namestaj" style="width:100%;">
+          </div>
+
+          <div class="item">
+            <img src="./Galerija/73457395_582561259224949_7117982715552716769_n.jpg" alt="Treci namestaj" style="width:100%;">
+          </div>
+        </div>
+
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </header>
 <!--:CAROUSEL-->
-<header>
-  <div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
 
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner">
-      <div class="item active">
-        <img src="./Galerija/74599492_1275987789278239_8482166276448924973_n.jpg" alt="Los Angeles" style="width:100%;">
-      </div>
+<!--SEKCIJA:-->
+    <br/>
+    <div id="sekcija1">
+    <div class="klasa1"></div>
+    <div class="klasa2"><h3 class="text-center">24 godine sa Vama.</h3><br>
+    <p class="text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>
+      Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,<br>
+       when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+    </div>
+    <div class="klasa3"></div>
 
-      <div class="item">
-        <img src="chicago.jpg" alt="Chicago" style="width:100%;">
+    </div>
+<!--:SEKCIJA-->
+
+<!--O NAMA:-->
+    <div class="container-fluid onama" id="onon">
+      <div class="row">
+        <div class="col-sm-6 on_img">
+          <img src="./img/onama_slika.jpg">
+        </div>
+        <div class="col-sm-6 on_text">
+          <h1>Ko smo mi?</h1>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+          <p id="par2">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+            <img src="./img/logo-big.png">
+        </div>
       </div>
-    
-      <div class="item">
-        <img src="ny.jpg" alt="New york" style="width:100%;">
+      <div class="arrow_up">
+        <a href="#">
+          <img src="./img/up.png">
+        </a>
+      </div>
+      <div class="arrow_down">
+        <a href="#glgl">
+          <img src="./img/down.png">
+        </a>
       </div>
     </div>
+<!--:O NAMA-->
 
-    <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-</header>
-<!--CAROUSEL:-->
-<br/>
-<div id="sekcija1">
-<div class="klasa1"></div>
-<div class="klasa2"><h3 class="text-center">24 godine sa Vama.</h3><br>
-<p class="text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>
-  Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,<br>
-   when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-</div>
-<div class="klasa3"></div>
- 
-</div>
+<!--GALLERY:-->
+    <div class="container-fluid galle">
+      <h1 id="glgl">Galerija</h1>
+      <div class="row">
+        <div class="col-sm-3">
+          <a href="./Galerija/1540825725398.jpeg" data-lightbox="gallery" data-title="Slika u galeriji">
+            <img src="./Galerija/1540825725398.jpeg" alt="">
+          </a>
+        </div>
+        <div class="col-sm-3">
+          <a href="./Galerija/1540825725398.jpeg" data-lightbox="gallery" data-title="Slika u galeriji">
+            <img src="./Galerija/1540825725398.jpeg" alt="">
+          </a>
+        </div>
+        <div class="col-sm-3">
+          <a href="./Galerija/1540825725398.jpeg" data-lightbox="gallery" data-title="Slika u galeriji">
+            <img src="./Galerija/1540825725398.jpeg" alt="">
+          </a>
+        </div>
+        <div class="col-sm-3">
+          <a href="./Galerija/1540825725398.jpeg" data-lightbox="gallery" data-title="Slika u galeriji">
+            <img src="./Galerija/1540825725398.jpeg" alt="">
+          </a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-3">
+          <a href="./Galerija/1540825725398.jpeg" data-lightbox="gallery" data-title="Slika u galeriji">
+            <img src="./Galerija/1540825725398.jpeg" alt="">
+          </a>
+        </div>
+        <div class="col-sm-3">
+          <a href="./Galerija/1540825725398.jpeg" data-lightbox="gallery" data-title="Slika u galeriji">
+            <img src="./Galerija/1540825725398.jpeg" alt="">
+          </a>
+        </div>
+        <div class="col-sm-3">
+          <a href="./Galerija/1540825725398.jpeg" data-lightbox="gallery" data-title="Slika u galeriji">
+            <img src="./Galerija/1540825725398.jpeg" alt="">
+          </a>
+        </div>
+        <div class="col-sm-3">
+          <a href="./Galerija/1540825725398.jpeg" data-lightbox="gallery" data-title="Slika u galeriji">
+            <img src="./Galerija/1540825725398.jpeg" alt="">
+          </a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-3">
+          <a href="./Galerija/1540825725398.jpeg" data-lightbox="gallery" data-title="Slika u galeriji">
+            <img src="./Galerija/1540825725398.jpeg" alt="">
+          </a>
+        </div>
+        <div class="col-sm-3">
+          <a href="./Galerija/1540825725398.jpeg" data-lightbox="gallery" data-title="Slika u galeriji">
+            <img src="./Galerija/1540825725398.jpeg" alt="">
+          </a>
+        </div>
+        <div class="col-sm-3">
+          <a href="./Galerija/1540825725398.jpeg" data-lightbox="gallery" data-title="Slika u galeriji">
+            <img src="./Galerija/1540825725398.jpeg" alt="">
+          </a>
+        </div>
+        <div class="col-sm-3">
+          <a href="./Galerija/1540825725398.jpeg" data-lightbox="gallery" data-title="Slika u galeriji">
+            <img src="./Galerija/1540825725398.jpeg" alt="">
+          </a>
+        </div>
+      </div>
+      <div class="arrow_up">
+        <a href="#">
+          <img src="./img/up.png">
+        </a>
+      </div>
+      <div class="arrow_down">
+        <a href="#ctct">
+          <img src="./img/down.png">
+        </a>
+      </div>
+    </div>
+<!--:GALLERY-->
 
 <!--CONTACT:-->
     <div class="container-fluid contact">
