--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <ul class="nav navbar-nav navbar-right">
               <li><a href="#">Početna</a></li>
               <li><a href="#onon">O nama</a></li>
-              <li><a href="#">Cenovnik</a></li>
+              <li><a href="#cncn">Cenovnik</a></li>
               <li><a href="#glgl">Galerija</a></li>
               <li><a href="#ctct">Kontakt</a></li>
             </ul>
@@ -119,13 +119,95 @@
         </a>
       </div>
       <div class="arrow_down">
-        <a href="#glgl">
+        <a href="#cncn">
           <img src="./img/down.png">
         </a>
       </div>
     </div>
 <!--:O NAMA-->
+<!--:CENOVNIK-->
+<div class="container-fluid">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 text-center"><h1 id="cncn">Cenovnik</h1>
+        <table class="table" id="table">
+          <thead>
+            <tr>
+              <th scope="col" class="text-center" id="zaglavlje">#</th>
+              <th scope="col"class="text-center" id="zaglavlje">First</th>
+              <th scope="col" class="text-center" id="zaglavlje">Last</th>
+              <th scope="col" class="text-center" id="zaglavlje">Handle</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row" class="text-center" id="zaglavlje1">1</th>
+              <td id="krem">Otto</td>
+              <td id="krem">@mdo</td>
+              <td id="krem">Mark</td>
+            </tr>
+            <tr>
+              <th scope="row" class="text-center" id="zaglavlje1">2</th>
+              <td id="braonkasta">Jacob</td>
+              <td id="braonkasta">Thornton</td>
+              <td id="braonkasta">@fat</td>
+            </tr>
+            <tr>
+              <th scope="row" class="text-center" id="zaglavlje1">3</th>
+              <td id="krem">Larry</td>
+              <td id="krem">the Bird</td>
+              <td id="krem">@twitter</td>
+            </tr>
+            <tr>
+              <th scope="row" class="text-center" id="zaglavlje1">2</th>
+              <td id="braonkasta">Jacob</td>
+              <td id="braonkasta">Thornton</td>
+              <td id="braonkasta">@fat</td>
+            </tr>
+            <tr>
+              <th scope="row" class="text-center" id="zaglavlje1">3</th>
+              <td id="krem">Larry</td>
+              <td id="krem">the Bird</td>
+              <td id="krem">@twitter</td>
+            </tr>
+            <tr>
+              <th scope="row" class="text-center" id="zaglavlje1">2</th>
+              <td id="braonkasta">Jacob</td>
+              <td id="braonkasta">Thornton</td>
+              <td id="braonkasta">@fat</td>
+            </tr>
+            <tr>
+              <th scope="row" class="text-center" id="zaglavlje1">3</th>
+              <td id="krem">Larry</td>
+              <td id="krem">the Bird</td>
+              <td id="krem">@twitter</td>
+            </tr>
+            <tr>
+              <th scope="row" class="text-center" id="zaglavlje1">2</th>
+              <td id="braonkasta">Jacob</td>
+              <td id="braonkasta">Thornton</td>
+              <td id="braonkasta">@fat</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+  <div class="arrow_up text-right">
+    <a href="#">
+      <img src="./img/up.png">
+    </a>
+  </div>
+  <div class="arrow_down">
+    <a href="#glgl">
+      <img src="./img/down.png">
+    </a>
+  </div>
+</div>
 
+
+
+<!--CENOVNIK:-->
 <!--GALLERY:-->
     <div class="container-fluid galle">
       <h1 id="glgl">Galerija</h1>
