--- a/index.html
+++ b/index.html
@@ -125,8 +125,9 @@
       </div>
     </div>
 <!--:O NAMA-->
-<!--:CENOVNIK-->
-<div class="container-fluid">
+
+<!--CENOVNIK:-->
+<div class="container-fluid ceno">
   <div class="container">
     <div class="row">
       <div class="col-sm-12 text-center"><h1 id="cncn">Cenovnik</h1>
@@ -204,10 +205,8 @@
     </a>
   </div>
 </div>
+<!--:CENOVNIK-->
 
-
-
-<!--CENOVNIK:-->
 <!--GALLERY:-->
     <div class="container-fluid galle">
       <h1 id="glgl">Galerija</h1>
