--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <ul class="nav navbar-nav navbar-right">
               <li><a href="#">Početna</a></li>
               <li><a href="#onon">O nama</a></li>
-              <li><a href="#cncn">Cenovnik</a></li>
+            <!--  <li><a href="#cncn">Cenovnik</a></li> -->
               <li><a href="#glgl">Galerija</a></li>
               <li><a href="#ctct">Kontakt</a></li>
             </ul>
@@ -122,7 +122,7 @@
         </a>
       </div>
       <div class="arrow_down">
-        <a href="#cncn">
+        <a href="#glgl">
           <img src="./img/down.png">
         </a>
       </div>
@@ -130,6 +130,7 @@
 <!--:O NAMA-->
 
 <!--CENOVNIK:-->
+<!--
     <div class="container-fluid ceno">
       <div class="container">
         <div class="row">
@@ -208,13 +209,14 @@
         </a>
       </div>
     </div>
+  -->
 <!--:CENOVNIK-->
 
 <!--GALLERY:-->
     <div class="container-fluid galle">
       <h1 id="glgl">Galerija</h1>
       <div class="pick_one">
-        <a href="#glgl" id="left_pick" onclick="metNamFun()">Metalni nameštaj</a><a href="#glgl" id="mid_pick" onclick="otiraciFun()">Otirači</a><a href="#glgl" id="right_pick" onclick="zidKrevFun()">Zidni kreveti</a>
+        <a href="#glgl" id="left_pick" onclick="metNamFun()">Metalni nameštaj</a><a href="#glgl" id="mid_pick" onclick="otiraciFun()">Otirači</a><a href="#glgl" id="mid_pick_2" onclick="kancNamFun()">Kancelarijski nameštaj</a><a href="#glgl" id="right_pick" onclick="zidKrevFun()">Zidni kreveti</a>
       </div>
       <div class="row met_nam">
         <div class="col-sm-3">
@@ -279,6 +281,72 @@
         <div class="col-sm-3">
           <a href="./Galerija/1540825725398.jpeg" data-lightbox="gallery" data-title="Slika u galeriji">
             <img src="./Galerija/1540825725398.jpeg" alt="">
+          </a>
+        </div>
+      </div>
+      <div class="row kanc_nam">
+        <div class="col-sm-3">
+          <a href="./Galerija/82452597_2683971761694770_3855243258515587779_n.jpg" data-lightbox="gallery" data-title="Slika u galeriji">
+            <img src="./Galerija/82452597_2683971761694770_3855243258515587779_n.jpg" alt="">
+          </a>
+        </div>
+        <div class="col-sm-3">
+          <a href="./Galerija/82452597_2683971761694770_3855243258515587779_n.jpg" data-lightbox="gallery" data-title="Slika u galeriji">
+            <img src="./Galerija/82452597_2683971761694770_3855243258515587779_n.jpg" alt="">
+          </a>
+        </div>
+        <div class="col-sm-3">
+          <a href="./Galerija/82452597_2683971761694770_3855243258515587779_n.jpg" data-lightbox="gallery" data-title="Slika u galeriji">
+            <img src="./Galerija/82452597_2683971761694770_3855243258515587779_n.jpg" alt="">
+          </a>
+        </div>
+        <div class="col-sm-3">
+          <a href="./Galerija/82452597_2683971761694770_3855243258515587779_n.jpg" data-lightbox="gallery" data-title="Slika u galeriji">
+            <img src="./Galerija/82452597_2683971761694770_3855243258515587779_n.jpg" alt="">
+          </a>
+        </div>
+      </div>
+      <div class="row kanc_nam">
+        <div class="col-sm-3">
+          <a href="./Galerija/82452597_2683971761694770_3855243258515587779_n.jpg" data-lightbox="gallery" data-title="Slika u galeriji">
+            <img src="./Galerija/82452597_2683971761694770_3855243258515587779_n.jpg" alt="">
+          </a>
+        </div>
+        <div class="col-sm-3">
+          <a href="./Galerija/82452597_2683971761694770_3855243258515587779_n.jpg" data-lightbox="gallery" data-title="Slika u galeriji">
+            <img src="./Galerija/82452597_2683971761694770_3855243258515587779_n.jpg" alt="">
+          </a>
+        </div>
+        <div class="col-sm-3">
+          <a href="./Galerija/82452597_2683971761694770_3855243258515587779_n.jpg" data-lightbox="gallery" data-title="Slika u galeriji">
+            <img src="./Galerija/82452597_2683971761694770_3855243258515587779_n.jpg" alt="">
+          </a>
+        </div>
+        <div class="col-sm-3">
+          <a href="./Galerija/82452597_2683971761694770_3855243258515587779_n.jpg" data-lightbox="gallery" data-title="Slika u galeriji">
+            <img src="./Galerija/82452597_2683971761694770_3855243258515587779_n.jpg" alt="">
+          </a>
+        </div>
+      </div>
+      <div class="row kanc_nam">
+        <div class="col-sm-3">
+          <a href="./Galerija/82452597_2683971761694770_3855243258515587779_n.jpg" data-lightbox="gallery" data-title="Slika u galeriji">
+            <img src="./Galerija/82452597_2683971761694770_3855243258515587779_n.jpg" alt="">
+          </a>
+        </div>
+        <div class="col-sm-3">
+          <a href="./Galerija/82452597_2683971761694770_3855243258515587779_n.jpg" data-lightbox="gallery" data-title="Slika u galeriji">
+            <img src="./Galerija/82452597_2683971761694770_3855243258515587779_n.jpg" alt="">
+          </a>
+        </div>
+        <div class="col-sm-3">
+          <a href="./Galerija/82452597_2683971761694770_3855243258515587779_n.jpg" data-lightbox="gallery" data-title="Slika u galeriji">
+            <img src="./Galerija/82452597_2683971761694770_3855243258515587779_n.jpg" alt="">
+          </a>
+        </div>
+        <div class="col-sm-3">
+          <a href="./Galerija/82452597_2683971761694770_3855243258515587779_n.jpg" data-lightbox="gallery" data-title="Slika u galeriji">
+            <img src="./Galerija/82452597_2683971761694770_3855243258515587779_n.jpg" alt="">
           </a>
         </div>
       </div>
@@ -445,26 +513,26 @@
               *Paket
               <textarea class="porudz" placeholder="U polje porudžbina možete da stavite detalje proizvoda koji želite da vam napravimo. Npr: dimenzije, boja..." name="porudzbina" id="por" rows="3"></textarea>
             </label>
-            <input type="submit" value="Send">Poruči</input>
+            <input class="dugmesend" type="submit" value="Send"></input>
             <br>
             <h6>*Obavezna polja</h6>
           </form>
         </div>
-        <div class="col-sm-3 social">
+        <div class="col-sm-6 social">
           <div class="container-fluid">
-            <a href="#" target="_blank">
+            <a href="https://www.instagram.com/metalni_namestaj/" target="_blank">
               <img src="./img/instagram.png">
-              <p>facebook link</p>
-            </a>
-          </div>
-          <div class="container-fluid">
-            <a href="https://www.instagram.com/metalni_namestaj/" target=_blank>
-              <img src="./img/facebook.png">
               <p>@metalni_namestaj</p>
             </a>
           </div>
+          <div class="container-fluid">
+            <a href="#" target=_blank>
+              <img src="./img/facebook.png">
+              <p>facebook</p>
+            </a>
+          </div>
         </div>
-          
+
       </div>
       <div class="arrow_up">
         <a href="#">
@@ -490,9 +558,10 @@
           </a>
         </div>
         <div class="col-sm-3">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2830.3193143277626!2d20.475712714840874!3d44.815059084543606!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475a7abc3dc4b4e3%3A0x978fb25efd7c04d6!2sJa%C5%A1e%20Prodanovi%C4%87a%2018%2C%20Beograd%2011000!5e0!3m2!1sen!2srs!4v1580831422169!5m2!1sen!2srs" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-            <p>Jaše Prodanovića 18, Beograd</p>
-          
+          <a href="mailto:>smsistembg@gmail.com">
+            <img src="./img/mail.png">
+            <p>smsistembg@gmail.com</p>
+          </a>
         </div>
         <div class="col-sm-3">
           <a href="tel:011 3392060"> <!--poziv na telefon-->
@@ -507,10 +576,8 @@
           </a>
         </div>
         <div class="col-sm-3">
-          <a href="mailto:>smsistembg@gmail.com">
-            <img src="./img/mail.png">
-            <p>smsistembg@gmail.com</p>
-          </a>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2830.3193143277626!2d20.475712714840874!3d44.815059084543606!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475a7abc3dc4b4e3%3A0x978fb25efd7c04d6!2sJa%C5%A1e%20Prodanovi%C4%87a%2018%2C%20Beograd%2011000!5e0!3m2!1sen!2srs!4v1580831422169!5m2!1sen!2srs" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+            <p>Jaše Prodanovića 18, Beograd</p>
         </div>
       </div>
       <div class="row copy_rgt">
