--- a/index.html
+++ b/index.html
@@ -62,16 +62,17 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
           <div class="item active">
-            <img src="./Galerija/1540825725398.jpeg" alt="Prvi namestaj" style="width:100%;">
+            <img src="./SM sistem galerija/kancelarijski namestaj/k10.jpg" alt="Prvi namestaj" style="width:100%;">
           </div>
 
           <div class="item">
-            <img src="./Galerija/75243087_2447518835563729_7587613427636716469_n.jpg" alt="Drugi namestaj" style="width:100%;">
+            <img src="./Sm sistem galerija/zidni kreveti/z12.jpg" alt="Drugi namestaj" style="width:100%;">
           </div>
 
           <div class="item">
-            <img src="./Galerija/73457395_582561259224949_7117982715552716769_n.jpg" alt="Treci namestaj" style="width:100%;">
+            <img src="./SM sistem galerija/metalni namestaj/m130.jpg" alt="Treci namestaj" style="width:100%;">
           </div>
+
         </div>
 
         <!-- Left and right controls -->
@@ -91,7 +92,7 @@
     <br/>
     <div id="sekcija1">
     <div class="klasa1"></div>
-    <div class="klasa2"><h3 class="text-center">24 godine sa Vama.</h3><br>
+    <div class="klasa2"><h3 class="text-center">24 godine sa Vama</h3><br>
     <p class="text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>
       Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,<br>
        when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
@@ -1183,8 +1184,7 @@
               *Paket
               <textarea class="porudz" placeholder="U polje porudžbina možete da stavite detalje proizvoda koji želite da vam napravimo. Npr: dimenzije, boja..." name="porudzbina" id="por" rows="3"></textarea>
             </label>
-            <input class="dugmesend" type="submit" value="Send"></input>
-            <br>
+            <input type="submit" value="Send" id="btn_pesak"></input>
             <h6>*Obavezna polja</h6>
           </form>
         </div>
