--- a/index.html
+++ b/index.html
@@ -385,8 +385,8 @@
           </a>
         </div>
         <div class="col-sm-3">
-          <a href="./SM sistem galerija/metalni namestaj/m31.jpg" data-lightbox="gallery" data-title="Slika u galeriji">
-            <img src="./SM sistem galerija/metalni namestaj/m31.jpg" alt="">
+          <a href="./SM sistem galerija/metalni namestaj/m31.png" data-lightbox="gallery" data-title="Slika u galeriji">
+            <img src="./SM sistem galerija/metalni namestaj/m31.png" alt="">
           </a>
         </div>
         <div class="col-sm-3">
