--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
               </ul>
             </li>
             <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" href="#">Zidni krevet
+              <a class="dropdown-toggle" data-toggle="dropdown" href="#">Zidni kreveti
               <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="#glgl" onclick="sklopKrevFun()">Sklopivi nameštaj</a></li>
