--- a/index.html
+++ b/index.html
@@ -169,7 +169,49 @@
       </div>
     </div>
 <!--:O NAMA-->
-
+<div class="container-fluid ">
+  <div class="container text-center">
+    <br>
+    <h1>Reference</h1>
+    <br>
+    <div class="row">
+      <div class="col-sm-3"><h3>SKUPŠTINA GRADA BEOGRADA</h3></div>
+      <div class="col-sm-3"><h3>JP POŠTA SRBIJE</h3></div>
+      <div class="col-sm-3"><h3>TELEKOM SRBIJA</h3></div>
+      <div class="col-sm-3"><h3>TELENOR SRBIJA</h3></div>
+    </div>
+    <div class="row">
+      <div class="col-sm-3"><h3>METALUŠKO TEHNOLOŠKI FAKULTET</h3></div>
+      <div class="col-sm-3"><h3>FAKULTET BEZBEDNOSTI</h3></div>
+      <div class="col-sm-3"><h3>FILOZOFSKI FAKULTET</h3></div>
+      <div class="col-sm-3"><h3>NAFNA INDUSTRIJA SRBIJE</h3></div>
+    </div>
+    <div class="row">
+      <div class="col-sm-3"><h3>KBC ZVEZDARA</h3></div>
+      <div class="col-sm-3"><h3>KBC DRAGIŠA MIŠOVIĆ</h3></div>
+      <div class="col-sm-3"><h3>GERONTOLOŠKI CENTAR MLADENOVAC</h3></div>
+      <div class="col-sm-3"><h3>BOLNICA ZA BOLESTI ZAVISNOSTI BEOGRAD</h3></div>
+    </div>
+    <div class="row">
+      <div class="col-sm-3"><h3>EMMEZETA</h3></div>
+      <div class="col-sm-3"><h3>LAGUNA</h3></div>
+      <div class="col-sm-3"><h3>DELFI</h3></div>
+      <div class="col-sm-3"><h3>PRODAJNI CENTAR OKOV BEOGRAD</h3></div>
+    </div>
+    <div class="row">
+      <div class="col-sm-3"><h3>EMKA FEINGUS MIONICA</h3></div>
+      <div class="col-sm-3"><h3>AUTOBUSKA STANICA AUTO KODEKS ARANĐELOVAC</h3></div>
+      <div class="col-sm-3"><h3>HAUZMAJSTOR DOO BEOGRAD</h3></div>
+      <div class="col-sm-3"><h3>ARHI PRO DOO BEOGRAD</h3></div>
+    </div>
+    <div class="row">
+      <div class="col-sm-3 nevidljivo"><h3></h3></div>
+      <div class="col-sm-3"><h3>VRŠAC</h3></div>
+      <div class="col-sm-3"><h3>I MNOGA DRUGA PRAVNA I FIZIČKA LICA</h3></div>
+      <div class="col-sm-3 nevidljivo"><h3></h3></div>
+    </div>
+  </div>
+</div>
 <!--CENOVNIK:-->
 <!--
     <div class="container-fluid ceno">
