Treba ubaciti part 2 tekst u ko smo mi

--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
     <br/>
     <div id="sekcija1">
     <div class="klasa1"></div>
-    <div class="klasa2"><h3 class="text-center">24 godine sa Vama</h3><br>
-    <p class="text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>
-      Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,<br>
-       when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+    <div class="klasa2"><h3 class="text-center">28 godina sa Vama</h3><br>
+    <p class="text-center">SM Sistem doo je preduzeće osnovano 1992 godine. <br>
+      Proizvodnja nameštaja, proizvodnja drugih metalnih proizvoda, kao i opremanje poslovnih i stambenih objekata<br>
+      su samo dokaz na ozbiljnost i uspešnost našeg preduzeća, kroz tradiciju dugu 28 godina.</p>
     </div>
     <div class="klasa3"></div>
 
@@ -150,10 +150,10 @@
         </div>
         <div class="col-sm-6 on_text">
           <h1>Ko smo mi?</h1>
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-          <p id="par2">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+          <p>Pretpostavljamo da je ovo deo gde se zvanično upoznajemo? Da ne dužimo priču i ne ponavljamo se,
+            kao što smo i gore prethodno pomenuli ozbiljnost i uspešnost naše firme svedočena je godinama rada sa nekim od najozbiljnijih klijenata u našoj državi.
+          </p>
+          <p id="par2"></p>
             <img src="./img/logo-big.png">
         </div>
       </div>
